tests/fail/destruct_named_completeness_fail.stderr
error[E042C]: Elided member 'host' of shape 'Config' does not have a default value.
 --> tests/fail/destruct_named_completeness_fail.tk:6:40
  |
 6 |     auto Config(port = p, debug = d) = c
  |                                        ^
